# ConformalIdealDelaunay

./: CMakeLists.txt  build.sh  run.sh
py/: script_conformal.py  script_conformal.py_new  script_conformal2.py
src/conformal_ideal_delaunay/: CID.cpp  CMakeLists.txt
src/conformal_seamless_similarity/: CMakeLists.txt  CSM.cpp
